--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "q": "1.4.1",
     "react": "0.14.3",
-    "react-dom": "0.14.3"
+    "react-dom": "0.14.3",
+    "react-redux": "4.0.3",
+    "redux": "3.0.5"
   },
   "devDependencies": {
     "babel-core": "6.3.21",
