--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "0.14.3",
     "react-dom": "0.14.3",
     "react-redux": "4.0.3",
-    "redux": "3.0.5"
+    "redux": "3.0.5",
+    "redux-thunk": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "6.3.21",
