--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "react-dom": "0.14.3",
     "react-redux": "4.0.3",
     "redux": "3.0.5",
-    "redux-thunk": "1.0.2"
+    "redux-thunk": "1.0.2",
+    "http-server": "0.8.5"
   },
   "devDependencies": {
     "babel-core": "6.3.21",
     "babel-loader": "6.2.0",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
-    "http-server": "0.8.5",
     "jsx-loader": "0.13.2",
     "webpack": "1.12.9",
     "webpack-dev-server": "1.14.0"
