--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "author": "Adam Barrell",
   "license": "ISC",
   "dependencies": {
+    "css-loader": "0.23.1",
+    "extract-text-webpack-plugin": "1.0.1",
     "http-server": "0.8.5",
+    "node-sass": "3.4.2",
     "q": "1.4.1",
     "react": "0.14.3",
+    "react-css-modules": "3.6.8",
     "react-dom": "0.14.3",
     "react-redux": "4.0.3",
     "redux": "3.0.5",
     "redux-thunk": "1.0.2",
-    "underscore": "^1.8.3"
+    "sass-loader": "3.1.2",
+    "style-loader": "0.13.0",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "babel-core": "6.3.21",
