--- a/provisioning/roles/nodesource.node/tasks/main.yml
+++ b/provisioning/roles/nodesource.node/tasks/main.yml
@@ -13,7 +13,7 @@
   when: not apt_https_transport.stat.exists
 
 - name: Import the NodeSource GPG key into apt
-  apt_key: url=https://deb.nodesource.com/gpgkey/nodesource.gpg.key state=present
+  apt_key: id=68576280 url="https://keyserver.ubuntu.com/pks/lookup?op=get&fingerprint=on&search=0x1655A0AB68576280"
 
 - name: Add NodeSource deb repository
   apt_repository: repo='deb https://deb.nodesource.com/node_{{ nodejs_version }} {{ ansible_distribution_release }} main' state=present
